<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.condition_monitoring.DataMonitoringActivity">
    <include layout="@layout/layout_title_bar"></include>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:textSize="13sp"
            android:text="@string/equipment_name"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:text="@string/normal"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_lump"
                android:tint="@color/green"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:text="@string/alarm"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_lump"
                android:tint="@color/red"/>
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_alarm_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:text="@string/alarm_prompt" />
        <TextView
            android:id="@+id/tv_abnormal_motors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp" />
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:layout_marginTop="15dp"
        android:id="@+id/rv_data_monitoring"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>