<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="85dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    android:layout_marginBottom="10dp" >
    <TextView
        android:id="@+id/tv_equipment_name_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:textSize="13sp"
        android:text="@string/test_point_name"/>
    <TextView
        android:id="@+id/tv_equipment_name"
        android:layout_toRightOf="@id/tv_equipment_name_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="13sp"/>

    <TextView
        android:id="@+id/tv_LED_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@id/iv_LED"
        android:textSize="13sp"
        android:text="@string/LED"/>
    <ImageView
        android:id="@+id/iv_LED"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_lump"
        android:tint="@color/darkGreen"/>

    <TextView
        android:id="@+id/tv_temperature_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_below="@id/tv_equipment_name_hint"
        android:textSize="13sp"
        android:text="@string/temperature"/>
    <TextView
        android:id="@+id/tv_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_below="@id/tv_equipment_name_hint"
        android:layout_toEndOf="@id/tv_temperature_hint"
        android:layout_toRightOf="@id/tv_temperature_hint"
        android:textSize="13sp"/>

    <TextView
        android:id="@+id/tv_current_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/tv_temperature_hint"
        android:textSize="13sp"
        android:text="@string/current"/>
    <TextView
        android:id="@+id/tv_current"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/tv_temperature"
        android:layout_toEndOf="@id/tv_current_hint"
        android:layout_toRightOf="@id/tv_current_hint"
        android:textSize="13sp"/>

    <TextView
        android:id="@+id/tv_voltage_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="100dp"
        android:layout_toEndOf="@id/tv_temperature"
        android:layout_toRightOf="@id/tv_temperature"
        android:layout_below="@id/tv_LED_hint"
        android:textSize="13sp"
        android:text="@string/voltage"/>
    <TextView
        android:id="@+id/tv_voltage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@id/tv_voltage_hint"
        android:layout_toRightOf="@id/tv_voltage_hint"
        android:layout_below="@id/tv_LED_hint"
        android:textSize="13sp"/>

</RelativeLayout>