<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.homepage.MainActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/homepage_toolbar"
        style="@style/toolbarStyle"
        android:background="@drawable/bottom_border">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="@dimen/normal_padding"
            android:paddingEnd="@dimen/normal_padding">
            <TextView
                android:id="@+id/tv_homepage_title"
                android:text="@string/homepage_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textSize="15sp"
                android:textColor="#555555"
                android:maxEms="13"
                android:ellipsize="end"
                android:maxLines="1"
                android:textStyle="bold"/>
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/normal_padding">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/left_blue_border"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/condition_monitoring"
            android:textSize="13sp" />
        <android.support.v7.widget.RecyclerView
            android:id="@+id/condition_monitoring"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingBottom="@dimen/normal_padding"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/normal_padding">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/left_blue_border"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/equipment_management"
            android:textSize="13sp" />
        <android.support.v7.widget.RecyclerView
            android:id="@+id/equipment_maintenance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingBottom="@dimen/normal_padding"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/normal_padding">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/left_blue_border"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/comprehensive_report"
            android:textSize="13sp" />
        <android.support.v7.widget.RecyclerView
            android:id="@+id/comprehensive_report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingBottom="@dimen/normal_padding"/>
    </LinearLayout>

</LinearLayout>